# rag-techniques

./: .gitignore  README.md  pyproject.toml
examples/: benchmark.py  quickstart.py
rag_techniques/: __init__.py  async_support.py  config.py  loaders.py  pipeline.py
rag_techniques/chunking/: __init__.py  base.py  fixed.py  semantic.py
rag_techniques/core/: __init__.py  embeddings.py  llm.py
rag_techniques/evaluation/: __init__.py  metrics.py
rag_techniques/query/: __init__.py  base.py  decompose.py  hyde.py  rewrite.py
rag_techniques/reranking/: __init__.py  base.py  cross_encoder.py  llm.py
rag_techniques/retrieval/: __init__.py  base.py  context_enriched.py  hybrid.py  vector.py
rag_techniques/vectorstore/: __init__.py  base.py  chroma.py  memory.py
tests/: __init__.py  conftest.py  test_chunking.py  test_loaders.py  test_pipeline.py  test_retrieval.py  test_vectorstore.py
